--- a/template/app_buddy/friend_request.html
+++ b/template/app_buddy/friend_request.html
@@ -1,32 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friend Requests</title>
-  <link rel="stylesheet" href="/static/bootstrap-5.3.2-dist/css/bootstrap.css">
-  <script src="/static/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-</head>
-<body style="background-color:rgb(241, 244, 246);">
-  <div class="container bg-white">
-      <div class="navbar navbar-expand-lg bg-primary">
-          <img src="/media/buddy_book_Logo.png" alt="" height="100" width="100" class="bg-white"><h5 style="color:white;">buddybook</h5>&nbsp;&nbsp;&nbsp;&nbsp;<h6 class="align-content-end"></h6><h6>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'log_out' %}" class="text-white">Sign Out?</a></h6>
-      </div>
-      <div class="row">            
-          <div class="col-4 border">
-              <ul>
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li>Friend Requests</li>
-                <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                <li><a href="{% url 'my_photos' %}">My Photos</a></li>
-                <li><a href="{% url 'about_me' %}">About Me</a></li>
-                <li>Settings</li>
-              </ul>
-          </div>
-          <div class="col-8 border">
+{% extends 'base.html' %} 
+{% block title %} My Photos {% endblock %}
+{% block content %} 
+            <link rel="stylesheet" href="/static/style.css">
+          <div class="content">
                 <div>
                     {% for i in key %}
-                     <table class="border-2">
+                     <table class="">
                         <form action="{% url 'accept' i.id %}" method="post">
                             {% csrf_token %}
                         <tr>
@@ -49,16 +28,14 @@
                         <tr>
                             <th></th>
                             <td><input type="submit" value="Accept" class="btn btn-success"></td>
-                            <td><a href="{% url 'reject' i.id %}" class="text-danger">Reject</a> </td>
+                            <td><a href="{% url 'reject' i.id %}" class="text-white nav-link" id="reject">Reject</a></td>
                         </form>
-                        </tr> 
-                                                
+                        </tr>                                                 
                      </table>   
                      {% endfor %}                                  
                 </div>          
             </div>     
-        </div>
-    </div>
+
   {% if messages  %}
           {% for msg in messages %}
           <script>
@@ -66,5 +43,4 @@
           </script>
           {% endfor %}
           {% endif %}
-</body>
-</html>
+{% endblock %}
