--- a/static/style.css
+++ b/static/style.css
@@ -15,8 +15,9 @@
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     background-color: rgb(251, 251, 251);
-    margin: 10px;
-    padding-left: 5px;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding-left: 0px;
 }
  img .profile-pic {
     border: solid;
@@ -35,3 +36,24 @@
 #sidebar .nav-link{
     margin-top: 20px;
 }
+
+#reject {
+    height: 50px;width: 100px;
+    background-color: rgb(234, 30, 30);
+    border-radius: 10px; text-align: center; 
+    margin-top: 10px;
+}
+
+.my_pic {
+    border: solid rgb(159, 158, 158);   
+    border-width: 5px;
+    margin: 20px; 
+    border-radius: 10px;
+}
+
+.nav-link:hover {
+    border: solid rgb(167, 163, 255);
+    margin: 0px;
+    border-radius: 15px;
+}
+
