--- a/template/app_buddy/buddy_profile.html
+++ b/template/app_buddy/buddy_profile.html
@@ -1,14 +1,8 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        {% block title %}
-        Buddy Book
-        {% endblock %}
-    </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/style.css">
@@ -65,40 +59,66 @@
       <!-- start of left sidebar -->
         <div class="box">
           <div class="content-sides" id="sidebar">
-            {% for i in detail %}
+            {% for i in cat %}
                 <a href="{% url 'about_me' %}"><img src="{{i.photo.url}}" alt="" height="300px" width="300px" style="position: relative;border: solid white; border-width: 10px; border-radius: 50%; margin: 20px; margin-bottom: 50px;"></a>
                 {% endfor %}
                 <br>
-                <ul>
-                    <a href="{% url 'home' %}" class="nav-link active" aria-current="page">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="blue" class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                            <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
-                          </svg>
-                        Home
-                      </a>
-                    <a href="{% url 'my_post' %}" class="nav-link active" aria-current="page"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="blue" class="bi bi-file-post" viewBox="0 0 16 16">
-                        <path d="M4 3.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5z"/>
-                        <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1"/>
-                      </svg> My Posts</a>
-                    <a href="{% url 'friend_request' %}" class="nav-link active" aria-current="page"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="blue" class="bi bi-person-add" viewBox="0 0 16 16">
-                        <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
-                        <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
-                      </svg> Friend Requests</a>
+                <ul>   {% for i in cat %}
+                    <a href="{% url 'about_buddy' i.id %}" class="nav-link active" aria-current="page"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="blue" class="bi bi-file-person" viewBox="0 0 16 16">
+                        <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                        <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+                      </svg> About Me</a>                                      
                     <a href="{% url 'friend_list' %}" class="nav-link active" aria-current="page"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="blue" class="bi bi-people-fill" viewBox="0 0 16 16">
                         <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
-                      </svg> My Friends</a>
+                      </svg> Friends</a>
                    <a href="{% url 'my_photos' %}" class="nav-link active" aria-current="page"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="blue" class="bi bi-camera-fill" viewBox="0 0 16 16">
                         <path d="M10.5 8.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
                         <path d="M2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4zm.5 2a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1m9 2.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"/>
-                      </svg> My Photos</a>                    
-                    
+                      </svg> Photos</a>                    
+                      {% endfor %}
                 </ul>
           </div>
     
-            {% block content %}
+<!-- Buddy Wall Starts here.. -->
+
+<div class="content">
+    <div style="margin-left: 50px;">
+      <a href="{% url 'post' %}" class="nav-link"><h5 style="color: rgb(79, 79, 236);">Post Something..</h5></a>
+      <br>                    
+  </div>
+  <div style="margin-left: 30px;">            
+      {% if bud_post == null %}
+          <h5><br>{{alert}}</h5>
+      {% else %}
+      {% for j in see %}
+      {% for i in bud_post %} 
+          {% if i.request_from.id == j.user_id_id  %}
+          <hr style="margin-bottom: 40px;">
+      <p><b style="color: rgb(32, 32, 215);"><a href="{% url 'fetch_buddy' j.user_id_id %}" class="nav-link"><img src="{{i.request_from.photo.url}}" alt="user-profile-picture" height="50px" width="50px" style="border-radius: 50%;">{{i.request_from.first_name}}&nbsp;{{i.request_from.last_name}}</b></a><span style="font-style: italic;font-size: xx-small;">&nbsp;&nbsp;Has posted on {{j.date}}</p>                                      
+      <p><b>{{j.title}}</b></p>              
+      <p><em>{{j.post}}</em></p>
+      <p><img src="{{j.image.url}}" alt="" height="450" width="600" style="border-radius: 10px;"></p>
+      <p><a href="{% url 'likes' j.id %}"><img src="/media/like.png" alt="" height="25px" width="25px"></a><b style="color: blue;">{{j.likes}}&nbsp;</b>likes&nbsp;<a href="{% url 'likers' j.id %}">Liked by</a>&nbsp;&nbsp;<img src="/media/dislike.png" alt="" height="20x" width="20px"></a> &nbsp;dislikes&nbsp;&nbsp;&nbsp;<a href="{% url 'comment' j.id %}">Comment</a></p>                    
+      <!-- (actually there is an if condition in the code below after {{k.comment}} for edit comment and delete comment to make changes or delete comment for a particular user, so that only that user can make change, for that I have used the {{key}} of logged in user_name, thats is why there is a 'key' in if condition ) -->
+      {% for k in comment %}  
+        {% if j.id == k.post_id_id %}         
+      <p class="col-8"><b style="color: blue;"><a href="{% url 'fetch_buddy' k.user_id_id %}"><img src="{{k.user_id.photo.url}}" height="50px" width="50px" alt="" style="border-radius: 50%;"></a>{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}&nbsp;&nbsp;{% if k.user_id.user_name == key %}<a href="{% url 'edit_comment' k.id %}" class="text-success">Edit</a>&nbsp;&nbsp;<a href="{'#'}" class="text-danger">Delete</a>{% endif %}</em></p>              
+        {% endif %}
+        {% endfor %}
+      {% endif %}
+      {% endfor %}
+      {% endfor %}
+      
+      {% endif %}
+      
+      <br>
+  </div> 
+  </div>
 
 
-            {% endblock %}  
+<!-- buddy wall ends here -->
+
+
  
           <!-- start of right sidebar -->
           <div class="content" style="margin: 10px;">
@@ -166,12 +186,6 @@
         </div>
       
       <!-- endof content -->
-      {% if messages  %}
-      {% for msg in messages %}
-      <script>
-          alert("{{msg}}")
-      </script>
-      {% endfor %}
-      {% endif %}
+
 </body>
 </html>
