--- a/template/app_buddy/liked_by.html
+++ b/template/app_buddy/liked_by.html
@@ -1,50 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Posts</title>
-  <link rel="stylesheet" href="/static/bootstrap-5.3.2-dist/css/bootstrap.css">
-  <script src="/static/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-</head>
-<body style="background-color:rgb(241, 244, 246);">
-  <div class="container bg-white">
-      <div class="navbar navbar-expand-lg bg-primary">
-          <img src="/media/buddy_book_Logo.png" alt="" height="100" width="100" class="bg-white"><h5 style="color:white;">buddybook</h5>&nbsp;&nbsp;&nbsp;&nbsp;<h6 class="align-content-end"><em>Logged In User : </em><b class="text-white"></b></h6><h6>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'log_out' %}" class="text-white">Sign Out?</a></h6>
-      </div>
-      <div class="row">            
-          <div class="col-4 border">
-              <ul>
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'my_post' %}">My Posts</a></li>
-                <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
-                <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                <li><a href="{% url 'my_photos' %}">My Photos</a></li>
-              </ul>
-          </div>
-          <div class="col-8 border">
-            <div>
-                
-                <ul>                    
-                    <table>
-                        <tr>
-                            <th>Name :</th>
-                            {% for i in key %}
-                            <td><a href="#">{{i.user_id.user_name}}</a></td>
-                            <td>, </td>
-                            {% endfor %}
-                        </tr>
-                    </table>
-                </ul>                
-            </div>
-           
-          </div>
-          <div>
-            
-          </div>
-           
-      </div>
-  </div>
+{% extends 'base.html' %} 
+{% block title %} Liked by {% endblock %}
+{% block content %} 
+
+          <div class="content">
+                <p>Liked by: </p> 
+            {% for i in see %}                            
+                <a href="{% url 'fetch_buddy' i.user_id_id %}">{{i.user_id.user_name}}</a>  
+                <!-- Here 'i.user_id_id' is used with iteration so because we need id of register_tb,
+                otherwise if we use 'i.id', we will get the id of liked_by_tb, which will not work. -->
+                <b>, </b>
+            {% endfor %} 
+             </div>
+
   {% if messages  %}
           {% for msg in messages %}
           <script>
@@ -52,5 +19,4 @@
           </script>
           {% endfor %}
           {% endif %}
-</body>
-</html>
+{% endblock %}
