--- a/template/base.html
+++ b/template/base.html
@@ -101,7 +101,7 @@
             {% endblock %}  
  
           <!-- start of right sidebar -->
-          <div class="content" style="margin: 10px;">
+          <div class="content" style="margin: 10px;" id="sidebar-r">
             <div >
                 <div class="position-sticky" style="top: 2rem;">
                   <div class="p-4 mb-3 bg-body-tertiary rounded">
