account settings added

--- a/template/app_buddy/friend_request.html
+++ b/template/app_buddy/friend_request.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} 
-{% block title %} My Photos {% endblock %}
+{% block title %} Friend Requests {% endblock %}
 {% block content %} 
             <link rel="stylesheet" href="/static/style.css">
           <div class="content">
@@ -27,10 +27,11 @@
                         </tr>
                         <tr>
                             <th></th>
-                            <td><input type="submit" value="Accept" class="btn btn-success"></td>
+                            <td><input type="submit" value="Accept" class="btn btn-success"></td>                            
                             <td><a href="{% url 'reject' i.id %}" class="text-white nav-link" id="reject">Reject</a></td>
-                        </form>
-                        </tr>                                                 
+                            <!-- <td><a href="{% url 'view_profile' i.id %}" class="nav-link">Visit Profile</a></td> -->                        
+                        </tr>  
+                    </form>                                               
                      </table>   
                      {% endfor %}                                  
                 </div>          
