--- a/template/app_buddy/buddy_profile.html
+++ b/template/app_buddy/buddy_profile.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buddy Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/style.css">
@@ -60,7 +61,7 @@
         <div class="box">
           <div class="content-sides" id="sidebar">
             {% for i in cat %}
-                <a href="{% url 'about_me' %}"><img src="{{i.photo.url}}" alt="" height="300px" width="300px" style="position: relative;border: solid white; border-width: 10px; border-radius: 50%; margin: 20px; margin-bottom: 50px;"></a>
+                <a href="{% url 'about_buddy' i.id %}"><img src="{{i.photo.url}}" alt="" height="300px" width="300px" style="position: relative;border: solid white; border-width: 10px; border-radius: 50%; margin: 20px; margin-bottom: 50px;"></a>
                 {% endfor %}
                 <br>
                 <ul>   {% for i in cat %}
