--- a/template/app_buddy/comment.html
+++ b/template/app_buddy/comment.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comment</title>
-  <link rel="stylesheet" href="/static/bootstrap-5.3.2-dist/css/bootstrap.css">
-  <script src="/static/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-</head>
-<body style="background-color:rgb(241, 244, 246);">
-  <div class="container bg-white">
-      <div class="navbar navbar-expand-lg bg-primary">
-          <img src="/media/buddy_book_Logo.png" alt="" height="100" width="100" class="bg-white"><h5 style="color:white;">buddybook</h5>&nbsp;&nbsp;&nbsp;&nbsp;<h6 class="align-content-end"></h6><h6>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'log_out' %}" class="text-white">Sign Out?</a></h6>
-      </div>
-      <div class="row">            
-          <div class="col-3 border">
-              <ul>
-                  <li><a href="{% url 'home' %}">Home</a></li>
-                  <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
-                  <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                  <li><a href="{% url 'my_photos' %}">My Photos</a></li>
-                  <li><a href="{% url 'about_me' %}">About Me</a></li>
-                  <li>Settings</li>
-              </ul>
-          </div>
-          <div class="col-9 border">
-                <div class="col-6">
+{% extends 'base.html' %}
+{% block title %} Post Comments {% endblock %}
+{% block content %}
+          <div class="content">
+                <div style="margin-left: 50px;">
                     {% for i in say %}
                     <form action="{% url 'commentaction' %}" method="post">
                         {% csrf_token %}
@@ -34,22 +12,18 @@
                     <p><em>{{i.post}}</em></p>                                
                     {% endfor %} 
                     
-                     <textarea name="comment" cols="20" rows="5" class="form-control" placeholder="What do you have to say about it?"></textarea><br>    
+                     <textarea name="comment" cols="10" rows="5" class="form-control" placeholder="What do you have to say about it?"></textarea><br>    
                      <input type="submit" value="Comment" class="btn btn-primary p-2">  
                     </form>            
                 </div>  
                                
             </div>
                    
-      </div>
-      
-  </div>
-  {% if messages  %}
+{% if messages  %}
           {% for msg in messages %}
           <script>
               alert("{{msg}}")
           </script>
           {% endfor %}
           {% endif %}
-</body>
-</html>
+{% endblock %}
