--- a/template/app_buddy/my_wall.html
+++ b/template/app_buddy/my_wall.html
@@ -18,7 +18,7 @@
               <p><b style="color: rgb(32, 32, 215);"><a href="{% url 'fetch_buddy' j.user_id_id %}" class="nav-link"><img src="{{i.request_from.photo.url}}" alt="user-profile-picture" height="50px" width="50px" style="border-radius: 50%;">{{i.request_from.first_name}}&nbsp;{{i.request_from.last_name}}</b></a><span style="font-style: italic;font-size: xx-small;">&nbsp;&nbsp;Has posted on {{j.date}}</p>                                      
               <p><b>{{j.title}}</b></p>              
               <p><em>{{j.post}}</em></p>
-              <p><img src="{{j.image.url}}" alt="" height="450" width="600" style="border-radius: 10px;"></p>
+              <p><img src="{{j.image.url}}" alt="" height="450" width="600" style="border-radius: 10px; aspect-ratio: auto;"></p>
               <p><a href="{% url 'likes' j.id %}"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" fill="blue" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
                 <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a10 10 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733q.086.18.138.363c.077.27.113.567.113.856s-.036.586-.113.856c-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.2 3.2 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.8 4.8 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z"/>
               </svg></a><b style="color: blue;">{{j.likes}}&nbsp;</b>likes&nbsp;<a href="{% url 'likers' j.id %}">Liked by</a>&nbsp;&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" fill="blue" class="bi bi-hand-thumbs-down-fill" viewBox="0 0 16 16">
@@ -27,7 +27,7 @@
               <!-- (actually there is an if condition in the code below after {{k.comment}} for edit comment and delete comment to make changes or delete comment for a particular user, so that only that user can make change, for that I have used the {{key}} of logged in user_name, thats is why there is a 'key' in if condition ) -->
               {% for k in comment %}  
                 {% if j.id == k.post_id_id %}         
-              <p class="col-8"><b style="color: blue;"><a href="{% url 'fetch_buddy' k.user_id_id %}"><img src="{{k.user_id.photo.url}}" height="50px" width="50px" alt="" style="border-radius: 50%;"></a>{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}&nbsp;&nbsp;{% if k.user_id.user_name == key %}<a href="{% url 'edit_comment' k.id %}" class="text-success">Edit</a>&nbsp;&nbsp;<a href="{'#'}" class="text-danger">Delete</a>{% endif %}</em></p>              
+              <p class="col-8"><b style="color: blue;"><a href="{% url 'fetch_buddy' k.user_id_id %}"><img src="{{k.user_id.photo.url}}" height="50px" width="50px" alt="" style="border-radius: 50%;"></a>{{k.user_id.user_name}} :</b><em style="color: rgb(12, 12, 12);" class="form-control">{{k.comment}}&nbsp;&nbsp;{% if k.user_id.user_name == key %}<a href="{% url 'edit_comment' k.id %}" class="text-success">Edit</a>&nbsp;&nbsp;<a href="{% url 'delete_comment' k.id %}" class="text-danger">Delete</a>{% endif %}</em></p>              
                 {% endif %}
                 {% endfor %}
               {% endif %}
