--- a/template/app_buddy/edit_comment.html
+++ b/template/app_buddy/edit_comment.html
@@ -1,47 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Comments</title>
-  <link rel="stylesheet" href="/static/bootstrap-5.3.2-dist/css/bootstrap.css">
-  <script src="/static/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-</head>
-<body style="background-color:rgb(241, 244, 246);">
-  <div class="container bg-white">
-      <div class="navbar navbar-expand-lg bg-primary">
-          <img src="/media/buddy_book_Logo.png" alt="" height="100" width="100" class="bg-white"><h5 style="color:white;">buddybook</h5>&nbsp;&nbsp;&nbsp;&nbsp;<h6 class="align-content-end"><em>Logged In User : </em><b class="text-white"></b></h6><h6>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'log_out' %}" class="text-white">Sign Out?</a></h6>
-      </div>
-      <div class="row">            
-          <div class="col-4 border">
-              <ul>
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'friend_request' %}">Friend Requests</a></li>
-                <li><a href="{% url 'friend_list' %}">My Friends</a></li>
-                <li><a href="{% url 'my_photos' %}">My Photos</a></li>
-                <li><a href="{% url 'about_me' %}">About Me</a></li>
-                <li><a href="{% url 'settings' %}">Settings</a></li>
-              </ul>
-          </div>
-          <div class="col-8 border pt-3">
+{% extends 'base.html' %} 
+{% block title %} Edit Comment {% endblock %}
+
+{% block content %} 
+          <div class="content" style="margin: 100px;">
             <div>                
                 {% for i in key %}
                 <form action="{% url 'update_comment' %}" method="post">
                     {% csrf_token %}   
                 <input type="hidden" name="id" value="{{i.id}}">             
                 <input type="text" name="comment" value="{{i.comment}}" class="form-control">
-                <button class="btn btn-primary">Change</button> 
+                <button class="btn btn-primary" style="margin: 10px;">Change</button> 
                 </form>                 
                 {% endfor %}
             </div>
            
           </div>
-          <div>
-            
-          </div>
-           
-      </div>
-  </div>
+          
   {% if messages  %}
           {% for msg in messages %}
           <script>
@@ -49,5 +23,4 @@
           </script>
           {% endfor %}
           {% endif %}
-</body>
-</html>
+{% endblock %}
